<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_payment_detail_container">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="55dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_payment"
            android:textColor="@color/colorWhite"
            android:id="@+id/title_city_tv"
            android:textSize="15sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancle_credit_card_btn"
            android:background="@android:color/transparent"
            android:text="@string/cancle"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="50dp"
            android:id="@+id/back_icon"
           android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:focusable="true"
            android:clickable="true"
            android:visibility="gone"
            android:src="@drawable/back_icon"
             />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_payment_method_btn"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"/>

    </android.support.percent.PercentRelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="15dp"
        android:background="@color/colorBG"
        android:layout_below="@+id/toolbar_sign_in"
        >



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/toolbar_sign_in"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:paddingLeft="15dp"
            android:textSize="14sp"
            android:inputType="phone"
            android:maxLength="19"
            android:imeOptions="actionNext"
            android:id="@+id/card_number_editText"
            android:hint="@string/card_hint"/>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorBG"
        android:layout_below="@+id/toolbar_sign_in"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorEditTextBG"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorEditTextBG"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:layout_marginTop="1dp"
        android:layout_below="@+id/toolbar_sign_in"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:paddingLeft="15dp"
            android:textSize="14sp"
            android:inputType="text"
            android:id="@+id/name_on_card"
            android:imeOptions="actionNext"
            android:hint="@string/card_name_hint"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorEditTextBG"
            />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:weightSum="2"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:background="@null"
                android:textSize="14sp"
                android:inputType="number"
                android:id="@+id/cvv"
                android:maxLength="4"
                android:imeOptions="actionNext"
                android:hint="@string/cvc_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:background="@color/colorEditTextBG"
                />

        </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="14sp"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:id="@+id/card_validity"
            android:hint="@string/date_hint"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:layout_marginLeft="2dp"
              android:background="@color/colorEditTextBG"
              />

      </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/toolbar_sign_in"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:paddingLeft="15dp"
            android:textSize="14sp"
            android:inputType="text"
            android:id="@+id/billing_address_card"
            android:imeOptions="actionNext"
            android:hint="@string/billing_address_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorEditTextBG"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:weightSum="2"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:background="@null"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/city_card"
            android:textSize="14sp"
            android:hint="@string/city_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorEditTextBG"
                android:layout_marginRight="5dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:id="@+id/card_state"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/state_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorEditTextBG"
                android:layout_marginLeft="2dp"
                />

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/toolbar_sign_in"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:paddingLeft="15dp"
            android:textSize="14sp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:id="@+id/card_zip"
            android:hint="@string/zip_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorEditTextBG"
            />


    </RelativeLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/transparent_layer"
        android:visibility="gone"
        android:background="@color/transparent_tint">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:id="@+id/progressDialog"
        android:visibility="gone"
        android:background="@drawable/round_shape_dialog_white"
        >
        <com.gmail.samehadar.iosdialog.CamomileSpinner
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:spinnerColor="@color/colorRed"
            />
    </RelativeLayout>


</FrameLayout>